alice-service.yml
apiVersion: v1
kind: Service
metadata:
  name: alice-service
  labels:
    app: alice-api
spec:
  type: NodePort
  ports:
  - port: 8001
    protocol: TCP
    targetPort: 8000
  selector:
    app: alice-api
