alice-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alice-ingress
spec:
  defaultBackend:
    service:
      name: alice-service
      port:
        number: 8001
